# django-eav-json-fields

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
eav_fields/: __init__.py  eav.py  fields.py  widgets.py
tests/: conftest.py  test_eav.py  test_fields.py  test_widgets.py
