[project]
name = "django-eav-json-fields"
version = "0.1.0"
description = "Schema-validated JSONFields for Django using an EAV-style DSL"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Lavers", email = "kolanos@gmail.com" }]
keywords = ["django", "jsonfield", "eav", "schema", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["django>=4.2"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "ruff",
    "ty>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eav_fields"]
include = ["LICENSE"]

[tool.hatch.build.targets.sdist]
include = ["eav_fields/", "LICENSE"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["eav_fields/", "tests/"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
